# CXRaide-3

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile
api/app/: main.py  model_loader.py
configs/: datasets.yaml  paths.yaml  training.yaml  validation.yaml
data/: README.md
dbt/cxraide_dbt/: dbt_project.yml
ml/experiments/: README.md
ml/inference/: predict.py
ml/training/: dataset.py  evaluate.py  model.py  train.py
notebooks/: .gitignore  01_data_exploration.ipynb  02_raw_metadata_review.ipynb  03_label_mapping_exploration.ipynb  04_preprocessing_prototype.ipynb  05_dataset_split_check.ipynb  06_kaggle_data_preprocessing.ipynb  README.md  requirements.txt
notebooks/DataPreparation/: 01_nih_preprocessing.ipynb  02_vinbig_preprocessing.ipynb  03_merge_nih_vinbig.ipynb  04_balance_dataset.ipynb
notebooks/Data_Preprocessing/: 01_label_and_metadata_preprocessing.ipynb  01_nih_preprocessing.ipynb
notebooks/data/processed/: 01_merged_nih_vinbig_training_boxes.csv  01_nih_bbox_selected_renamed.csv  01_vinbig_train_selected_classes.csv  02_nih_train_selected_classes_pa_only.csv  02_vinbig_transformed_bounding_boxes_1024.csv  03_vinbig_wbf_bounding_boxes_1024.csv
notebooks/docs/: methodology.md
notebooks/requirements/: requirements-full-local.txt
orchestration/airflow/dags/: cxraide_pipeline_dag.py
orchestration/prefect/flows/: full_pipeline.py  ingest_data.py  (+2 more)
reports/: data_card.md  model_card.md
scripts/: run_local_pipeline.ps1  setup_env.ps1
src/cxraide_pipeline/: __init__.py
tests/: test_scaffold.py
(+16 files in other folders)
