[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cxraide-ml-project"
version = "0.1.0"
description = "Dataset preparation and machine learning workspace for CXRaide chest X-ray analysis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mlflow",
  "pandas",
  "pydantic",
  "pyyaml",
  "fastapi",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]
ml = [
  "pillow",
  "scikit-learn",
  "torch",
  "torchvision",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools]
packages = []
